<resources>
    <string name="app_name">Team 22</string>
    <string name="welcome">Welcome to Team22 Group Project App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="select_theme">Select Theme</string>
    <string name="last_saved">LoadSaved</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="or">or</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="city_name_label">City: %1$s</string>
    <string name="latitude_label">Latitude: %1$s</string>
    <string name="longitude_label">Longitude: %1$s</string>
</resources>